<package>
  <name>meshproc_msgs</name>
  <version>0.1.0</version>

  <description>
    Defines ROS messages and services to interface with meshproc nodes.
  </description>

  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>
  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <license>BSD</license>

  <url type="website">http://open-ease.org</url>
  <url type="bugtracker">https://github.com/mpomarlan/meshproc/issues</url>
  <url type="repository">https://github.com/mpomarlan/meshproc</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>message_generation</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
 
  <run_depend>message_runtime</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
